# nao_virtual

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
nao_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_control/config/: nao_position_control.yaml  nao_trajectory_control.yaml  nao_trajectory_control_H21.yaml
nao_control/launch/: nao_control_position.launch  nao_control_trajectory.launch
nao_dcm_bringup/: CMakeLists.txt  package.xml
nao_dcm_bringup/config/: nao_dcm.yaml
nao_dcm_bringup/launch/: .nao_dcm_H25_bringup_remote.launch.swp  nao_dcm_H21_bringup.launch  nao_dcm_H21_bringup_remote.launch  nao_dcm_H25_bringup.launch  nao_dcm_H25_bringup_remote.launch  nao_dcm_odom_publisher.launch
nao_dcm_driver/: CMakeLists.txt  package.xml
nao_dcm_driver/cmake/: FindNAOqi.cmake
nao_dcm_driver/config/: nao_dcm_analyzers.yaml
nao_dcm_driver/include/nao_dcm_driver/: nao.h  nao.h~  oldnao.h
nao_dcm_driver/src/: .nao.cpp.swp  .nao_driver.cpp.swp  nao.cpp  newnao.cpp  newnao_driver.cpp  oldnao.cpp  oldnao_driver.cpp
nao_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  README  README.rst  nao.rosinstall  package.xml
nao_gazebo_plugin/config/: gazebo_ros_control_params.yaml  gazebo_ros_control_params_new.yaml
nao_gazebo_plugin/launch/: nao_gazebo.launch  nao_gazebo_plugin_H25.launch
nao_gazebo_plugin/scripts/: convertTrajMsg.py
nao_gazebo_plugin/testfiles/: traj.txt  trajBack.txt  trajBack_modified.txt  traj_modified.txt
nao_gazebo_plugin/testfiles/coucou/: coucou1.txt  coucou1_modified.txt  coucou2.txt  coucou2_modified.txt  coucou3.txt  coucou3_modified.txt
nao_gazebo_plugin/worlds/: naoFoot.world  nao_test.world  nao_test2.world
nao_v4_moveit_config/: CMakeLists.txt  README.md  package.xml
nao_v4_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  nao_robot_v4_H25.srdf  ompl_planning.yaml
nao_v4_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planner.launch  moveit_rviz.launch  nao_robot_v4_H25_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nao_v4_moveit_config/urdf/: nao.urdf
