<?xml version="1.0"?>
<package>
  <name>nao_control</name>
  <version>0.0.5</version>
  <description>The nao_control package</description>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>
  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/ros-naoqi/nao_virtual/issues</url>
  <url type="repository">https://github.com/ros-naoqi/nao_virtual.git</url>

  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
