<?xml version="1.0"?>
<package>
  <name>nao_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>The nao_gazebo_plugin package</description>

  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>
  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nao_gazebo_plugin</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>ros_control</build_depend> 
     <build_depend>ros_controllers</build_depend> 
     <build_depend>nao_description</build_depend> 
     <build_depend>gazebo_ros</build_depend> 
     <build_depend>nao_control</build_depend> 
     

     <run_depend>ros_control</run_depend> 
     <run_depend>ros_controllers</run_depend> 
     <run_depend>nao_description</run_depend> 
     <run_depend>gazebo_ros</run_depend> 
     <run_depend>nao_control</run_depend> 


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
