<?xml version="1.0"?>
<package>
  <name>nao_gazebo_plugin</name>
  <version>0.0.1</version>
  <description>The nao_gazebo_plugin package</description>

  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>
  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  <license>Apache 2.0</license>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>nao_control</run_depend>
  <run_depend>nao_description</run_depend>

  <build_depend>ros_control</build_depend> 
  <build_depend>ros_controllers</build_depend> 
  <build_depend>nao_description</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>nao_control</build_depend> 
     

  <run_depend>ros_control</run_depend> 
  <run_depend>ros_controllers</run_depend> 
  <run_depend>nao_description</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>nao_control</run_depend> 


  <buildtool_depend>catkin</buildtool_depend>



</package>
