<?xml version="1.0"?>
<package>
  <name>nao_gazebo_plugin</name>
  <version>0.0.6</version>
  <description>The nao_gazebo_plugin package</description>

  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/ros-naoqi/nao_virtual/issues</url>
  <url type="repository">https://github.com/ros-naoqi/nao_virtual.git</url>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>nao_description</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>nao_control</run_depend>
  <run_depend>nao_description</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
